Update fetch URL to production endpoint

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1367,7 +1367,7 @@
             };
              
             try {
-                const res = await fetch("http://localhost:1000/send", {
+                const res = await fetch("https://portfolioport.vercel.app/send", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
